# tikz-editor

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  MACRO_PLAN.md  README.md  RESTRUCTURE.md  TODO.md  TREE_PLAN.md  eslint.config.mjs  package-lock.json  package.json  skills-lock.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-static.yml  release-desktop.yml  sync-updater-release-notes.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json  macos-haptics.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: assistant.rs  lib.rs
apps/landing/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: index.html  package.json  playwright.config.ts  tmp-repro.mjs  vite.config.ts
docs/: architecture.md  editor-ui-plan.md  quality-audit.md
docs/comparison-inputs/: arrows-01-common-tips.tex  arrows-02-curves-bending.tex  arrows-03-multi-tips.tex  arrows-04-colors-reversed.tex  patterns-01-legacy-predefined.tex  patterns-02-meta-families.tex  patterns-10-legacy-lines-grid.tex  patterns-11-legacy-dots-stars.tex  patterns-12-legacy-colored.tex  patterns-20-meta-lines.tex  patterns-21-meta-hatch.tex  patterns-22-meta-dots-stars.tex  patterns-23-meta-lines-phase.tex
docs/keys/: index.json  library-decorations.json  library-fadings.json  library-matrix.json  pgffor.json  (+18 more)
scripts/: analyze-cpuprofile.mjs  benchmark-incremental-drag.mjs  bump-version.mjs  check-coordinate-typing.mjs  compare-arrow-fixtures.mjs  compare-paragraph-breaks.mjs  compare-pgf-docs-renderings.mjs  compare-tikz-renderers.mjs  ensure-dist-build.mjs  eslint-plugin-tikz.mjs  extract-docs.d.ts  extract-docs.mjs  generate-font-previews.mjs  report-editor-latest-json-hits.sh
src/: features.ts  index.ts
test/: app-compute-edges.spec.ts  app-menu-platform-visibility.spec.ts  app-menu.spec.ts  arxiv-source-render.spec.ts  assistant-image-attachments.spec.ts  assistant-preview-enhancements.spec.ts  capabilities.spec.ts  capability-fixtures.ts  close-guard.spec.ts  colors.spec.ts  completion.spec.ts  conditionals.spec.ts  context-definitions.spec.ts  context-menu.spec.ts  coords-helpers.ts  coords-typecheck.ts  coords.spec.ts  corpus.spec.ts  decorate-operation-recursion.spec.ts  decorations-corpus.spec.ts  desktop-tauri-config.spec.ts  diagnostics-collect.spec.ts  doc-hover-targets.spec.ts  domains-nodes-parse.spec.ts  domains-paths-operations.spec.ts  domains-statements-parse.spec.ts  edit-action-availability.spec.ts  edit-action-fuzz-replay.spec.ts  edit-actions.spec.ts  edit-analysis.spec.ts  edit-arrange.spec.ts  edit-format.spec.ts  edit-handles.spec.ts  edit-inspector-helpers.spec.ts  edit-inspector.spec.ts  edit-root-helpers.spec.ts  edit-snapping-interactions.spec.ts  edit-snapping.spec.ts  editor-commands.spec.ts  editor-reducer.spec.ts  (+67 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+474 files in other folders)
