[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-x = "2.0.1"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
clipboard-rs = "0.3.3"
base64 = "0.22"
rfd = { version = "0.15", features = ["common-controls-v6"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
url = "2.5"
tempfile = "3"
tokio = { version = "1", features = ["time"] }
notify = "8.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", features = ["NSObject", "NSNotification", "NSOperation", "NSString"] }
tauri-macos-haptics = "2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
