[package]
name = "app"
version = "0.4.0"
description = "A WYSIWYG editor foundation for TikZ"
authors = ["Dominik Peters"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-clipboard-x = "2.0.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
clipboard-rs = "0.3.3"
base64 = "0.22"
rfd = { version = "0.15", features = ["common-controls-v6"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
url = "2.5"
tempfile = "3"
tokio = { version = "1", features = ["time"] }
notify = "8.2"
flate2 = "1.1"
tar = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSAttributedString", "NSImage", "NSText"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSObject", "NSNotification", "NSOperation", "NSRange", "NSString", "NSURL", "NSAttributedString"] }
tauri-macos-haptics = "2.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
tauri-plugin-single-instance = "2.4.2"
